blog hot fix overflow

--- a/index.scss
+++ b/index.scss
@@ -408,25 +408,23 @@ section:nth-of-type(13) {
   border-radius: 0 0 30% 30%;
 }
 
-// <!-- ⬇️⬇️⬇️⬇️⬇️⬇️ sect14 Portfolio_Header ⬇️⬇️⬇️⬇️⬇️⬇️ -->
+// <!-- ⬇️⬇️⬇️⬇️⬇️⬇️ sect14 Already_bank_Header ⬇️⬇️⬇️⬇️⬇️⬇️ -->
 section:nth-of-type(14) {
   position: relative;
+  // top:0vh  ;
   // sect14 Portfolio_Header
   grid-area: sect14;
   // sect14 Portfolio_Header
 
-  top: -60vh;
+  top: -60%;
   height: 100vh;
   margin-bottom: -60vh;
   z-index: -1;
   #proftfolio-header {
-    margin-top: 70vh;
     @include align-center();
     flex-direction: column;
     text-align: center;
     max-width: 75vw;
-    @include align-center;
-    flex-direction: column;
     h2 {
       margin-bottom: 1em;
       font-family: 'Exo', sans-serif;
@@ -445,7 +443,7 @@ section:nth-of-type(14) {
 
 // <!-- ⛔️⛔️⛔️⛔️⛔️⛔️ ⛔️⛔️⛔️⛔️⛔️⛔️ -->
 // <!-- ⬇️⬇️⬇️⬇️⬇️⬇️ added new sctions ⬇️⬇️⬇️⬇️⬇️⬇️ -->
-// <!-- ⬇️⬇️⬇️⬇️⬇️⬇️ sect26 Portfolio_main ⬇️⬇️⬇️⬇️⬇️⬇️ -->
+// <!-- ⬇️⬇️⬇️⬇️⬇️⬇️ sect26 Already_bank_main ⬇️⬇️⬇️⬇️⬇️⬇️ -->
 section:nth-of-type(26) {
   grid-area: sect26;
   background-color: #1060b1;
@@ -472,17 +470,20 @@ section:nth-of-type(18) {
   background-color: rgba(40, 40, 40, 1);
 
   .blog-item {
+    min-height: 85%;
     margin: 1em;
 
     border: rgba(192, 192, 192, 0.3) solid 1px;
     p {
-      margin: 0 1em 0.5em;
-      min-height: 10vh;
-      max-height: 20vh;
-      display: block;
+      padding: 0.3em;
+      width: 100%;
+      max-height: 10vh;
+      display: inline-block;
       object-fit: cover;
-      font-size: 0.7em;
+      font-size: 0.4em;
       text-align: center;
+      overflow-x: hidden;
+      overflow-y: auto;
     }
     h2 {
       text-align: center;
